--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,9 +14,8 @@
 
 .footer {
   display: flex;
-  flex: 1;
   padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  /* border-top: 1px solid #eaeaea; */
   justify-content: center;
   align-items: center;
 }
